ajout_projet_final_SAE_S1.02_new

--- a/SAE_S1.05/index.html
+++ b/SAE_S1.05/index.html
@@ -146,42 +146,90 @@
 
         <section id="sae" class="mb-5">
             <div class="row">
-                <div class="col-md-5">
-                    <h2>Les SAÉ</h2>
-                    <p><strong>Situation d'Apprentissage et d'Évaluation.</strong></p>
+                <div class="col-12 mb-4">
+                    <h2>Les SAÉ et le Programme</h2>
                     <p>
-                        C'est la grande nouveauté du BUT. Fini les cours théoriques isolés ! 
-                        Les SAÉ sont des projets concrets (seul ou en groupe) qui vous demandent de mobiliser 
-                        les connaissances vues en cours pour résoudre un problème réel.
+                        <strong>La SAÉ (Situation d'Apprentissage et d'Évaluation)</strong> est au cœur du BUT. 
+                        Au lieu de cours théoriques isolés, vous travaillez sur des projets concrets qui mobilisent 
+                        plusieurs ressources (cours) simultanément.
                     </p>
-                    <div class="alert alert-warning">
-                        Exemple : Créer ce site web est une SAÉ !
+                    <div class="alert alert-info">
+                        <strong>Volume global 1ère année :</strong> 900h d'enseignements + 600h de projets (SAÉ).
                     </div>
                 </div>
-                <div class="col-md-7">
-                    <h3>Volume Horaire (1ère année)</h3>
-                    <table class="table table-striped table-bordered">
-                        <thead class="table-dark">
-                            <tr>
-                                <th>Type d'enseignement</th>
-                                <th>Volume (Heures)</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Enseignements (CM, TD, TP)</td>
-                                <td>~ 900 h</td>
-                            </tr>
-                            <tr>
-                                <td>Projets tuteurés (SAÉ)</td>
-                                <td>~ 600 h</td>
-                            </tr>
-                            <tr>
-                                <td>Stage (en fin d'année)</td>
-                                <td>8 à 12 semaines</td>
-                            </tr>
-                        </tbody>
-                    </table>
+
+                <div class="col-lg-6">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-header bg-amu-blue text-white fw-bold">
+                            Semestre 1 (Fondamentaux)
+                        </div>
+                        <div class="card-body p-0">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover mb-0 text-start font-size-sm">
+                                    <thead class="table-light">
+                                        <tr>
+                                            <th>Code</th>
+                                            <th>Matière (Ressource)</th>
+                                            <th class="text-center">Vol.</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr><td>R1.01</td><td>Initiation au développement</td><td class="text-center">102h</td></tr>
+                                        <tr><td>R1.02</td><td>Dév. interfaces Web</td><td class="text-center">23h</td></tr>
+                                        <tr><td>R1.03</td><td>Intro. Architecture</td><td class="text-center">23h</td></tr>
+                                        <tr><td>R1.04</td><td>Intro. Systèmes</td><td class="text-center">27h</td></tr>
+                                        <tr><td>R1.05</td><td>Intro. Bases de données</td><td class="text-center">50h</td></tr>
+                                        <tr><td>R1.06</td><td>Maths discrètes</td><td class="text-center">40h</td></tr>
+                                        <tr><td>R1.10</td><td>Anglais Technique</td><td class="text-center">30h</td></tr>
+                                        <tr class="table-warning fw-bold">
+                                            <td>SAÉ</td>
+                                            <td>Projets (Web, Algo, Poste de travail)</td>
+                                            <td class="text-center">75h</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 mt-4 mt-lg-0">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-header bg-amu-blue text-white fw-bold">
+                            Semestre 2 (Approfondissement)
+                        </div>
+                        <div class="card-body p-0">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-hover mb-0 text-start font-size-sm">
+                                    <thead class="table-light">
+                                        <tr>
+                                            <th>Code</th>
+                                            <th>Matière (Ressource)</th>
+                                            <th class="text-center">Vol.</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr><td>R2.01</td><td>Dév. Orienté Objets</td><td class="text-center">60h</td></tr>
+                                        <tr><td>R2.02</td><td>Dév. d'applications IHM</td><td class="text-center">42h</td></tr>
+                                        <tr><td>R2.03</td><td>Qualité de dév.</td><td class="text-center">24h</td></tr>
+                                        <tr><td>R2.04</td><td>Réseau & Bas niveau</td><td class="text-center">30h</td></tr>
+                                        <tr><td>R2.06</td><td>Exploitation Base de données</td><td class="text-center">40h</td></tr>
+                                        <tr><td>R2.07</td><td>Graphes</td><td class="text-center">34h</td></tr>
+                                        <tr><td>R2.12</td><td>Anglais Professionnel</td><td class="text-center">30h</td></tr>
+                                        <tr class="table-warning fw-bold">
+                                            <td>SAÉ</td>
+                                            <td>Projets (Site dynamique, BD, Réseau)</td>
+                                            <td class="text-center">100h</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-12 mt-3 text-center">
+                    <small class="text-muted">Source : Référentiel BUT Informatique - Programme National (Pages 14-15)</small>
                 </div>
             </div>
         </section>
