new_format_project

--- a/SAE_S1.05/index.html
+++ b/SAE_S1.05/index.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link" href="#presentation">Le BUT</a></li>
                     <li class="nav-item"><a class="nav-link" href="#competences">Compétences</a></li>
                     <li class="nav-item"><a class="nav-link" href="#parcours">Parcours A</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#sae">SAÉ & Planning</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#sae">SAÉ et Planning</a></li>
                     <li class="nav-item"><a class="nav-link" href="#glossaire">Glossaire</a></li>
                 </ul>
             </div>
