--- a/SAE_S1.05_third/glossaire.html
+++ b/SAE_S1.05_third/glossaire.html
@@ -62,10 +62,25 @@
     </div>
 
     <footer class="bg-dark text-white pt-5 pb-3 mt-5">
-        <div class="container text-center">
-            <p>&copy; 2025 - IUT Aix-Marseille (Arles) - Projet Web R1.02</p>
+        <div class="container">
+            <div class="row align-items-center mb-4">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    <img src="img/Logo IUT blanc.png" alt="Logo AMU Blanc" height="60" class="opacity-75">
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <a href="#" class="text-white text-decoration-none me-3"><i class="bi bi-linkedin fs-4"></i></a>
+                    <a href="#" class="text-white text-decoration-none me-3"><i class="bi bi-instagram fs-4"></i></a>
+                    <a href="#" class="text-white text-decoration-none"><i class="bi bi-globe fs-4"></i></a>
+                </div>
+            </div>
+            <hr class="border-secondary">
+            <div class="text-center text-secondary small">
+                <p class="mb-1">&copy; 2025 - Département Informatique IUT Arles</p>
+                <p>Projet Étudiant R1.02 - Design avec Bootstrap 5 & AMU Charter</p>
+            </div>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
