ajout_nav_bar_suivant

--- a/SAE_S1.05_third/competences.html
+++ b/SAE_S1.05_third/competences.html
@@ -80,7 +80,7 @@
                             <i class="bi bi-database fs-3"></i>
                         </div>
                         <h5 class="card-title fw-bold">4. GÉRER</h5>
-                        <p class="card-text text-muted small">Concevoir et exploiter des bases de données (SQL/NoSQL).</p>
+                        <p class="card-text text-muted small">Concevoir et exploiter des bases de données (SQL/PostgreSQL/NoSQL).</p>
                     </div>
                 </div>
             </div>
@@ -106,6 +106,14 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="text-center mt-5 pt-4 border-top">
+            <p class="text-muted mb-3">Une fois ces compétences acquises ?</p>
+            <a href="parcours.html" class="btn btn-amu-blue px-5 py-3 rounded-pill fw-bold shadow-sm">
+                Découvrir le Parcours A <i class="bi bi-arrow-right ms-2"></i>
+            </a>
         </div>
     </div>
 
