--- a/SAE_S1.05_third/parcours.html
+++ b/SAE_S1.05_third/parcours.html
@@ -79,6 +79,14 @@
         </div>
     </div>
 
+    <div class="text-center mt-5 pt-4 border-top">
+            <p class="text-muted mb-3">Curieux de voir l'emploi du temps ?</p>
+            <a href="programme.html" class="btn btn-amu-blue px-5 py-3 rounded-pill fw-bold shadow-sm">
+                Voir le Programme & SAÉ <i class="bi bi-arrow-right ms-2"></i>
+            </a>
+        </div>
+    </div>
+
     <footer class="bg-dark text-white pt-5 pb-3 mt-5">
         <div class="container">
             <div class="row align-items-center mb-4">
