--- a/SAE_S1.05_third/glossaire.html
+++ b/SAE_S1.05_third/glossaire.html
@@ -61,6 +61,14 @@
         </div>
     </div>
 
+    <div class="text-center mt-5 pt-4 border-top">
+            <p class="text-muted mb-3">Vous savez tout maintenant !</p>
+            <a href="index.html" class="btn btn-outline-dark px-5 py-3 rounded-pill fw-bold shadow-sm">
+                <i class="bi bi-arrow-counterclockwise me-2"></i> Retour à l'accueil
+            </a>
+        </div>
+    </div>
+
     <footer class="bg-dark text-white pt-5 pb-3 mt-5">
         <div class="container">
             <div class="row align-items-center mb-4">
