--- a/SAE_S1.05_third/programme.html
+++ b/SAE_S1.05_third/programme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programme & SAÉ - BUT Informatique</title>
+    <title>Programme et SAÉ - BUT Informatique</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
@@ -33,7 +33,7 @@
 
     <div class="bg-light py-5 mb-5 border-bottom">
         <div class="container text-center">
-            <h1 class="display-5 fw-bold text-amu-blue">Les SAÉ & le Programme</h1>
+            <h1 class="display-5 fw-bold text-amu-blue">Les SAÉ et le Programme</h1>
             <p class="lead text-muted">Détail des enseignements de 1ère année</p>
         </div>
     </div>
@@ -68,7 +68,7 @@
                                 <tr><td>R1.04</td><td>Systèmes d'exploitation</td><td class="text-end">27h</td></tr>
                                 <tr><td>R1.05</td><td>Bases de Données (BDD)</td><td class="text-end">50h</td></tr>
                                 <tr><td>R1.06</td><td>Mathématiques</td><td class="text-end">40h</td></tr>
-                                <tr class="table-warning fw-bold"><td>SAÉ</td><td>Projets Pluridisciplinaires</td><td class="text-end">~75h</td></tr>
+                                <tr class="table-warning fw-bold"><td>SAÉ</td><td>Projets Pluridisciplinaires</td><td class="text-end">75h</td></tr>
                             </tbody>
                         </table>
                     </div>
@@ -90,12 +90,20 @@
                                 <tr><td>R2.03</td><td>Qualité logicielle</td><td class="text-end">24h</td></tr>
                                 <tr><td>R2.04</td><td>Réseaux & Bas niveau</td><td class="text-end">30h</td></tr>
                                 <tr><td>R2.06</td><td>Exploitation BDD</td><td class="text-end">40h</td></tr>
-                                <tr class="table-warning fw-bold"><td>SAÉ</td><td>Projets (Appli lourde, Web dyn.)</td><td class="text-end">~100h</td></tr>
+                                <tr class="table-warning fw-bold"><td>SAÉ</td><td>Projets (Appli lourde, Web dyn.)</td><td class="text-end">100h</td></tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="text-center mt-5 pt-4 border-top">
+            <p class="text-muted mb-3">Certains termes restent flous ?</p>
+            <a href="glossaire.html" class="btn btn-amu-blue px-5 py-3 rounded-pill fw-bold shadow-sm">
+                Consulter le Glossaire <i class="bi bi-arrow-right ms-2"></i>
+            </a>
         </div>
     </div>
 
@@ -114,7 +122,7 @@
             <hr class="border-secondary">
             <div class="text-center text-secondary small">
                 <p class="mb-1">&copy; 2025 - Département Informatique IUT Arles</p>
-                <p>Projet Étudiant R1.02 - Design avec Bootstrap 5 & AMU Charter</p>
+                <p>Projet Étudiant R1.02 - Design avec Bootstrap 5 et AMU Charter</p>
             </div>
         </div>
     </footer>
