--- a/SAE_S1.05_third/competences.html
+++ b/SAE_S1.05_third/competences.html
@@ -46,7 +46,9 @@
                         <div class="icon-box bg-light text-amu-blue mb-3 mx-auto rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
                             <i class="bi bi-code-slash fs-3"></i>
                         </div>
-                        <h5 class="card-title fw-bold">1. RÉALISER</h5>
+                        <h5 class="card-title fw-bold">
+                               <a href="#" class="text-decoration-none stretched-link text-dark">1. RÉALISER</a>
+                        </h5>
                         <p class="card-text text-muted small">Développer des applications web, mobiles et logicielles.</p>
                     </div>
                 </div>
@@ -57,7 +59,9 @@
                         <div class="icon-box bg-light text-amu-blue mb-3 mx-auto rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
                             <i class="bi bi-cpu fs-3"></i>
                         </div>
-                        <h5 class="card-title fw-bold">2. OPTIMISER</h5>
+                        <h5 class="card-title fw-bold">
+                              <a href="#" class="text-decoration-none stretched-link text-dark">2. OPTIMISER</a>
+                        </h5>
                         <p class="card-text text-muted small">Analyser et améliorer les performances des algorithmes.</p>
                     </div>
                 </div>
@@ -68,7 +72,9 @@
                         <div class="icon-box bg-light text-amu-blue mb-3 mx-auto rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
                             <i class="bi bi-hdd-network fs-3"></i>
                         </div>
-                        <h5 class="card-title fw-bold">3. ADMINISTRER</h5>
+                        <h5 class="card-title fw-bold">
+                              <a href="#" class="text-decoration-none stretched-link text-dark">3. ADMINISTRER</a>
+                        </h5>
                         <p class="card-text text-muted small">Installer et sécuriser les systèmes et réseaux.</p>
                     </div>
                 </div>
@@ -79,7 +85,9 @@
                         <div class="icon-box bg-light text-amu-blue mb-3 mx-auto rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
                             <i class="bi bi-database fs-3"></i>
                         </div>
-                        <h5 class="card-title fw-bold">4. GÉRER</h5>
+                        <h5 class="card-title fw-bold">
+                              <a href="#" class="text-decoration-none stretched-link text-dark">4. GÉRER</a>
+                        </h5>
                         <p class="card-text text-muted small">Concevoir et exploiter des bases de données (SQL/PostgreSQL/NoSQL).</p>
                     </div>
                 </div>
@@ -90,7 +98,9 @@
                         <div class="icon-box bg-light text-amu-blue mb-3 mx-auto rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
                             <i class="bi bi-kanban fs-3"></i>
                         </div>
-                        <h5 class="card-title fw-bold">5. CONDUIRE</h5>
+                        <h5 class="card-title fw-bold">
+                              <a href="#" class="text-decoration-none stretched-link text-dark">5. ORGANISER</a>
+                        </h5>
                         <p class="card-text text-muted small">Gestion de projet Agile, planification et besoins clients.</p>
                     </div>
                 </div>
@@ -101,7 +111,9 @@
                         <div class="icon-box bg-light text-amu-blue mb-3 mx-auto rounded-circle d-flex align-items-center justify-content-center" style="width: 60px; height: 60px;">
                             <i class="bi bi-people fs-3"></i>
                         </div>
-                        <h5 class="card-title fw-bold">6. COLLABORER</h5>
+                        <h5 class="card-title fw-bold">
+                              <a href="#" class="text-decoration-none stretched-link text-dark">6. COMMUNIQUER</a>
+                        </h5>
                         <p class="card-text text-muted small">Travail d'équipe, communication et éthique professionnelle.</p>
                     </div>
                 </div>
@@ -132,11 +144,51 @@
             <hr class="border-secondary">
             <div class="text-center text-secondary small">
                 <p class="mb-1">&copy; 2025 - Département Informatique IUT Arles</p>
-                <p>Projet Étudiant R1.02 - Design avec Bootstrap 5 & AMU Charter</p>
+                <p>Projet Étudiant R1.02 - Design avec Bootstrap 5 et AMU Charter</p>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <button type="button" class="btn" id="btn-back-to-top">
+        <i class="bi bi-arrow-up fw-bold"></i>
+    </button>
+
+    <script>
+        // 1. GESTION DU BOUTON RETOUR EN HAUT
+        let mybutton = document.getElementById("btn-back-to-top");
+
+        // Quand on scrolle de 20px vers le bas, on montre le bouton
+        window.onscroll = function () {
+            scrollFunction();
+        };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // Quand on clique, on remonte tout en haut
+        mybutton.addEventListener("click", backToTop);
+
+        function backToTop() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+
+        // 2. PETITE ANIMATION AU CHARGEMENT DE LA PAGE
+        // On ajoute la classe 'fade-in-up' au conteneur principal pour un effet fluide
+        document.addEventListener("DOMContentLoaded", function() {
+            const mainContainer = document.querySelector('.container.my-5') || document.querySelector('.container.mb-5');
+            if(mainContainer) {
+                mainContainer.classList.add('fade-in-up');
+            }
+        });
+    </script>
+
 </body>
 </html>
