--- a/SAE_S1.05_third/programme.html
+++ b/SAE_S1.05_third/programme.html
@@ -128,5 +128,45 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <button type="button" class="btn" id="btn-back-to-top">
+        <i class="bi bi-arrow-up fw-bold"></i>
+    </button>
+
+    <script>
+        // 1. GESTION DU BOUTON RETOUR EN HAUT
+        let mybutton = document.getElementById("btn-back-to-top");
+
+        // Quand on scrolle de 20px vers le bas, on montre le bouton
+        window.onscroll = function () {
+            scrollFunction();
+        };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // Quand on clique, on remonte tout en haut
+        mybutton.addEventListener("click", backToTop);
+
+        function backToTop() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+
+        // 2. PETITE ANIMATION AU CHARGEMENT DE LA PAGE
+        // On ajoute la classe 'fade-in-up' au conteneur principal pour un effet fluide
+        document.addEventListener("DOMContentLoaded", function() {
+            const mainContainer = document.querySelector('.container.my-5') || document.querySelector('.container.mb-5');
+            if(mainContainer) {
+                mainContainer.classList.add('fade-in-up');
+            }
+        });
+    </script>
+    
 </body>
 </html>
